force-app/main/default/objects/Event_Expense_Product_Approver__mdt/Event_Expense_Product_Approver__mdt.object-meta.xml
<CustomObject>
    <description>Event Expense Product Approvers - First Level</description>
    <label>Event Expense ProductApprover(1st Level)</label>
    <pluralLabel>Event Expense Product Approver</pluralLabel>
</CustomObject>