force-app/main/default/objects/Event_Expense_Product_Approver__mdt/fields/Approver_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_User_Id__c</fullName>
    <label>Approver User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>