force-app/main/default/objects/Event_Expense_Product_Approver__mdt/listViews/Event_Expense_Product_Approver_View.listView-meta.xml
<ListView>
    <fullName>Event_Expense_Product_Approver_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Approver_User_Id__c</columns>
    <columns>Approver_User_Name__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Event Expense Product Approver View</label>
</ListView>